--- a/index.html
+++ b/index.html
@@ -26,11 +26,39 @@
 
     <main id="page__home">
 
-        <!-- ☰ MENUS -->
-        <div class="menus">
-        </div>
-        <!-- fim menus -->
-      
+
+        <section class="carousel">
+
+            <!-- carousel com imagens -->
+            <div class="swiper-intro">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="titulos">
+                <div class="titulos__container">
+                    <div class="titulo__trailer">Trailer</div>
+                    <div class="titulos__wrapper swiper-wrapper">
+                        <div class="titulo__item swiper-slide">
+                            <div class="text">Movie</div>
+                            <div class="outline">Movie</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+
+
+
+        </section>
+
 
         <section class="trabalhos">
             <div class="container">
