--- a/sobre.html
+++ b/sobre.html
@@ -27,7 +27,6 @@
 
     <main id="page__sobre">
 
-<!-- https://www.one-tab.com/page/5J5DQJWARKS2oIoX5fGjbg -->
 
         <header class="intro__content">
             <img class="img__intro" src="assets/img/bg-sobre.jpg" alt="intro">
@@ -258,7 +257,8 @@
 
     </main>
 
-
+ <!-- swiper -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- jquery -->
 
