--- a/filtro.html
+++ b/filtro.html
@@ -86,47 +86,79 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
 
-                    <div class="swiper-slide xl-1">
+                    <a href="#" class="swiper-slide xl-1">
                         <img src="assets/img/trabalhos/trabalho4.png" alt="trabalho">
-                        <h2>Disney</h2>
-                        <h3>SOUL</h3>
-                    </div>
+                        <div class="text__content">
+                            <h2>Disney</h2>
+                            <h3>SOUL</h3>
+                        </div>
+                    </a>
 
-                    <div class="swiper-slide  xl-1">
+                    <a href="#" class="swiper-slide  xl-1">
                         <img src="assets/img/trabalhos/trabalho1.png" alt="trabalho">
 
-                        <h2>Fox Movies</h2>
-                        <h3>Terremoto:
-                            A Falha de San Andreas </h3>
-                    </div>
+                        <div class="text__content">
+                            <h2>Fox Movies</h2>
+                            <h3>Terremoto:
+                                A Falha de San Andreas </h3>
+                        </div>
+                    </a>
 
-                    <div class="swiper-slide  xl-1">
+                    <a href="#" class="swiper-slide  xl-1">
                         <img src="assets/img/trabalhos/trabalho2.png" alt="trabalho">
 
-                        <h2>Paris Filmes</h2>
-                        <h3>Minha mãe é
-                            uma peça 2 </h3>
-                    </div>
+                        <div class="text__content">
+                            <h2>Paris Filmes</h2>
+                            <h3>Minha mãe é
+                                uma peça 2 </h3>
+                        </div>
+                    </a>
 
-                    <div class="swiper-slide  xl-2">
+                    <a href="#" class="swiper-slide  xl-2">
                         <img src="assets/img/trabalhos/trabalho3.png" alt="trabalho">
+                        <div class="text__content">
 
-                        <h2>Sony Pictures</h2>
-                        <h3>Venom</h3>
-                    </div>
+                            <h2>Sony Pictures</h2>
+                            <h3>Venom</h3>
+                        </div>
+                    </a>
 
-                    <div class="swiper-slide  xl-1">
+                    <a href="#" class="swiper-slide  xl-1">
                         <img src="assets/img/trabalhos/trabalho5.png" alt="trabalho">
-                        <h2>Sony Pictures</h2>
-                        <h3>Venom</h3>
-                    </div>
+                        <div class="text__content">
+                            <h2>Sony Pictures</h2>
+                            <h3>Venom</h3>
+                        </div>
+                    </a>
+
+                    <a href="#" class="swiper-slide  xl-1">
+                        <img src="assets/img/trabalhos/trabalho5.png" alt="trabalho">
+                        <div class="text__content">
+                            <h2>Sony Pictures</h2>
+                            <h3>Venom</h3>
+                        </div>
+                    </a>
+
+                    <a href="#" class="swiper-slide  xl-1">
+                        <img src="assets/img/trabalhos/trabalho5.png" alt="trabalho">
+                        <div class="text__content">
+                            <h2>Sony Pictures</h2>
+                            <h3>Venom</h3>
+                        </div>
+                    </a>
 
                 </div>
             </div>
         </section>
 
+
     </main>
 
+    <svg class="wave" viewBox="0 0 1920 216" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M0 0H64C128 0 256 0 384 12C512 24 640 48 768 84C896 120 1024 168 1152 168C1280 168 1408 120 1536 108C1664 96 1792 120 1856 132L1920 144V216H1856C1792 216 1664 216 1536 216C1408 216 1280 216 1152 216C1024 216 896 216 768 216C640 216 512 216 384 216C256 216 128 216 64 216H0V0Z"
+            fill="#262222" fill-opacity="0.1" />
+    </svg>
 
 
     <!-- jquery -->
@@ -149,44 +181,45 @@
     <!-- Boostrap 5, Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous">
-    </script>
+        </script>
 
     <script>
         const swiperSlide = new Swiper(".swiper-container", {
 
             slidesPerView: 'auto',
             spaceBetween: 30,
-            centeredSlides: false,
 
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
             },
             breakpoints: {
+
                 320: {
                     slidesPerView: "auto",
                     centeredSlides: true,
-                    spaceBetween: 25,
-                },
-                720: {
-                    slidesPerView: "auto",
-                    centeredSlides: false,
-                    spaceBetween: 25,
-                },
-                1024: {
-                    slidesPerView: "auto",
-                    spaceBetween: 50,
-                    centeredSlides: false,
-
+                    spaceBetween: 10,
+                    slidesOffsetAfter: 0,
+                    slidesOffsetBefore: 0,
                 },
 
-                1240: {
-                    slidesPerView: "auto",
-                    spaceBetween: 0,
+                1239: {
+                    slidesPerView: 4,
+                    spaceBetween: 30,
                     centeredSlides: false,
+                    slidesOffsetAfter: 20,
+                    slidesOffsetBefore: 20,
+
+                },
+                1439: {
+                    slidesPerView: 6,
+                    spaceBetween: 30,
+                    centeredSlides: false,
+                    slidesOffsetAfter: 20,
+                    slidesOffsetBefore: 20,
 
                 },
             }
