--- a/index.html
+++ b/index.html
@@ -369,233 +369,12 @@
     <!-- Boostrap 5, Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous">
-    </script>
+        </script>
 
-
-
-
-    <script>
-        let valorX = 100
-        let valorMobileItem1 = " -12vw"
-        let mouseVar = true
-        let valorMobileItem4 = "7vw"
-
-        //redeclarar mobile
-        const mobile = window.matchMedia('(max-width: 540px)').matches
-        if (mobile) {
-            valorX = 40
-            valorMobileItem4 = "9vw"
-            valorMobileItem1 = " -20vw"
-            mouseVar = false
-        }
-        //imagnes
-        const swiperImagens = new Swiper(".swiper-intro", {
-            effect: "fade",
-            slidesPerView: 'auto',
-            spaceBetween: 0,
-            centeredSlides: false,
-            preloadImages: true,
-
-
-
-        })
-
-        const tlLetra = gsap.timeline({
-            paused: true,
-        })
-        tlLetra
-        const pagination = document.querySelector("#pag")
-        /* texto */
-        const swiperTexto = new Swiper(".titulo__container", {
-
-            slidesPerView: 'auto',
-            spaceBetween: 10,
-            centeredSlides: true,
-            direction: "vertical",
-            // grabCursor: true,
-            speed: 600,
-            initialSlide: 2,
-            preloadImages: true,
-            mousewheel: {
-                eventsTarget: ".carousel",
-                // releaseOnEdges: true,
-                // thresholdDelta: 10,
-                // sensitivity: -10,
-                // forceToAxis: true,
-                // thresholdTime: 1000
-            },
-            mousewheel: mouseVar,
-
-            pagination: {
-                el: pagination,
-                clickable: true,
-            },
-            onAny(eventName, ...args) {
-                console.log('Event: ', eventName);
-                // console.log('Event data: ', args);
-
-
-
-            },
-
-            on: {
-
-                setTransition: function () {
-                    /*     gsap.to(".titulo__container", {
-                          scale:2,
-                        }) */
-                },
-                transitionEnd: function () {
-                    if (this.realIndex === 4) {
-                        console.log("oi");
-                        this.mousewheel.disable()
-                    }
-
-
-                },
-
-                snapIndexChange: function () {
-                    let ativo = document.querySelector(".ativo .text")
-                    let desativado = document.querySelectorAll(".titulo__item .text")
-
-                    desativado.forEach((i) => {
-                        gsap.to(i, {
-                            opacity: 0,
-                            visibility: "hidden",
-                            webkitClipPath: "polygon(0% 100%, 0% 100%, 100% 100%, 0% 100%)"
-
-                        })
-                    })
-
-                    gsap.to(ativo, {
-                        opacity: 1,
-                        visibility: "visible",
-                        webkitClipPath: "polygon(0% 0%, 100% 0%, 100% 0%, 100% 100%, 0% 100%)",
-
-
-                    })
-                    /*  gsap.to(".titulo__trailer", {
-                         y: -20,
-                         duration:.5
-                     }) */
-                    /*  gsap.to(".swiper-intro .swiper-slide-active img",{
-                         scale:1.5,
-                         duration:40,
-                     }) */
-
-
-
-                }
-
-                // scroll: function (el, evt) {
-                //     if (!this.mousewheel.enabled) {
-                //         setTimeout(() => {
-                //             this.mousewheel.enable()
-
-                //         }, 300);
-                //     }
-
-                // },
-            },
-
-
-
-            thumbs: {
-                swiper: swiperImagens,
-            },
-
-        })
-
-        function mudancaTexto() {
-            swiperTexto.slides.forEach(i => i.classList.remove("ativo"))
-            swiperTexto.slides[swiperTexto.realIndex].classList.add("ativo");
-
-            let array = swiperTexto.slides
-            let Antes = array.slice('0', swiperTexto.realIndex + 1).reverse();
-            let depois = array.slice(swiperTexto.realIndex);
-
-            let indexAtual = swiperTexto.realIndex
-
-
-
-            Antes.forEach((i, index) => {
-                gsap.to(i, {
-                    x: valorX * index,
-                    ease: "linear",
-                    duration: .2
-
-                })
-            })
-
-            depois.forEach((i, index) => {
-
-                gsap.to(i, {
-                    x: valorX * index,
-                    ease: "linear",
-                    duration: .2
-
-                })
-
-            })
-            gsap.to(swiperTexto.slides[swiperTexto.realIndex], {
-                x: 0,
-                duration: .2,
-
-            })
-
-
-            if (indexAtual === 0) {
-                gsap.to(".titulo__trailer", {
-                    x: valorMobileItem1,
-                })
-
-
-            } else if (indexAtual === 1) {
-                gsap.to(".titulo__trailer", {
-                    x: " -3vw",
-                })
-
-
-            } else if (indexAtual === 4) {
-                gsap.to(".titulo__trailer", {
-                    x: valorMobileItem4,
-                })
-
-
-            } else {
-                gsap.to(".titulo__trailer", {
-                    x: 0,
-                })
-
-            }
-        }
-        mudancaTexto()
-
-
-        setTimeout(() => {
-            swiperTexto.update()
-        }, 300);
-
-
-        swiperTexto.on("activeIndexChange", () => {
-            mudancaTexto()
-        })
-
-        function inicio() {
-            let ativo = document.querySelector(".ativo .text")
-            gsap.to(ativo, {
-                opacity: 1,
-                visibility: "visible",
-                webkitClipPath: "polygon(0% 0%, 100% 0%, 100% 0%, 100% 100%, 0% 100%)",
-            })
-
-        }
-        inicio()
-    </script>
-
+    <script type="text/javascript" src="assets/js/animacao-prov.js"></script>
 
 </body>
 
