--- a/sobre.html
+++ b/sobre.html
@@ -257,7 +257,7 @@
 
     </main>
 
- <!-- swiper -->
+    <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- jquery -->
@@ -296,13 +296,18 @@
                 paused: true,
             })
 
+            const tl2 = gsap.timeline({ //scroll
+                paused: true,
+
+            })
+            //set
             gsap.set([h1Intro, spanIntro], {
                 y: 300,
                 skewY: 3,
-                // skewX: -1,
                 autoAlpha: 0,
-                // rotateX: -200,
                 transformOrigin: "top left"
+                // skewX: -1,
+                // rotateX: -200,
             })
 
             tl
@@ -312,10 +317,10 @@
                     skewX: 0,
                     autoAlpha: 1,
                     rotateX: 0,
-
                     ease: Circ.easeOut,
                     stagger: .3,
                     rotateX: 0,
+
                     onComplete: () => {
                         [spanIntro, h1Intro].forEach(i => i.classList.add("animou"))
                     },
@@ -331,11 +336,7 @@
 
             });
 
-            //scroll
-            const tl2 = gsap.timeline({
-                paused: true,
-                smoothChildTiming: true,
-            })
+
 
             // tl2
 
@@ -347,89 +348,10 @@
                 yoyo: true,
                 repeat: -1
             })
-            // ScrollTrigger.create({
-            //     trigger: imgIntro,
-            //     once: false,
-            //     start: "100px center", // [trigger] [scroller] positions
-            //     end: "20px 80%",
-            //     scrub: 1,
-            //     snap: 1 / 100,
-            //     markers: true,
-            //     once: false,
-            //     // markers: true,
-            //     toggleActions: "play pause resume reset",
-            //     onEnter: function () {
 
-            //     },
-            //     /*   onScrubComplete: function(){
-            //           console.log("terminou");
-            //       },
-            //       onLeave: function(){
-            //           console.log("saiu");
-            //       },
-            //       toggleClass: "TESTE", */
-            //     // onEnterBack: function () {
-            //     //     animateFrom(elem, -1)
-            //     // },
-            //     // onLeave: function () {
-            //     //     hide(elem)
-            //     // } // assure that the element is hidden when scrolled into view
-            // });
 
         }
         animationSobre()
-
-
-        //button magnetic
-
-        // $(document).ready(function () {
-        //     $('.circle').wrap('<div class="container__button">');
-
-        //     $('body').on('mouseenter', '.container__button', function (e) {
-        //         gsap.to(this, {
-        //             duration: 0.3,
-        //             height: 200,
-        //             width: 200
-        //         });
-        //         gsap.to($(this).find('.circle'), {
-        //             duration: 0.3,
-        //             scale: 1.3
-        //         });
-        //     });
-
-        //     $('.container__button').mouseleave(function (e) {
-        //         gsap.to(this, {
-        //             duration: 0.3,
-        //             height: 150,
-        //             width: 150
-        //         });
-        //         gsap.to($(this).find('.circle'), {
-        //             duration: 0.3,
-        //             scale: 1,
-        //             x: 0,
-        //             y: 0
-        //         });
-        //     });
-
-        //     $('.container__button').mousemove(function (e) {
-        //         parallaxIt(e, 30);
-        //     });
-
-
-        // });
-
-        // function parallaxIt(e, movement) {
-        //     var $this = $(e.target);
-        //     var relX = e.pageX - $this.offset().left;
-        //     var relY = e.pageY - $this.offset().top;
-
-        //     gsap.to($this.find('.circle'), {
-        //         duration: 0.3,
-        //         x: (relX - $this.width() / 2) / $this.width() * movement,
-        //         y: (relY - $this.height() / 2) / $this.height() * movement,
-        //         ease: Power2.easeOut
-        //     });
-        // }
     </script>
 </body>
 
